# OneAI

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: analytics_routes.py  auth_routes.py  conversation_routes.py  message_routes.py  model_routes.py  router.py  user_routes.py
apps/api/app/core/: config.py  database.py  dependencies.py  errors.py  logging.py  security.py
apps/api/app/db/: base.py
apps/api/app/db/models/: analytics_event.py  base.py  conversation.py  message.py  model_registry.py  model_run.py  user.py
apps/api/app/db/repositories/: analytics_repository.py  conversation_repository.py  message_repository.py  model_repository.py  model_run_repository.py  user_repository.py
apps/api/app/schemas/: analytics.py  auth.py  common.py  conversation.py  message.py  model.py  user.py
apps/api/app/seeds/: model_registry.py
apps/api/app/services/: analytics_service.py  auth_service.py  conversation_service.py  message_service.py
apps/api/app/services/chains/: base_chain.py  fallback_chain.py  message_chain.py  title_chain.py
apps/api/app/services/chat/: chat_orchestrator.py  context_builder.py  prompt_builder.py  run_recorder.py  stream_manager.py
apps/api/app/services/providers/: base_provider.py  openrouter_provider.py  provider_registry.py
apps/api/app/services/routing/: cost_estimator.py  fallback_policy.py  model_router.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 202606140001_initial_phase_one.py
docs/: abc.txt  (+8 more)
(+145 files in other folders)
